# hefs-fews-hub

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  jupyter-panel-proxy.yml  jupyter_server_config.py  pyproject.toml
.github/workflows/: docker_publish.yml
docs/: AWS_SETUP.md  notes.md
playground/: create_panel_proxy_config.py  dashboard_funcs.py  jupyter-panel-proxy.yml  panel_dash.ipynb  panel_dashboard.ipynb  panel_dashboard.py  panel_requirements.txt  simple.geojson  start_dashboard.py  start_dashboard.sh
scripts/: dashboard.desktop  dashboard.ipynb  dashboard_funcs.py  start_dashboard.sh
scripts/reforecasts/: download_gefs_from_s3.py
src/hefs_fews_hub/: __init__.py  dashboard_funcs.py  jupyter_server_proxy_config.py  panel_dashboard.py
