[tool.poetry]
name = "hefs-fews-hub"
version = "0.1.0"
description = ""
authors = ["Sam Lamont <slamont@rit.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.17"
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"
nbstripout = "^0.7.1"


[tool.poetry.group.panel.dependencies]
panel = "^1.5.2"
watchfiles = "^0.24.0"
jupyter-bokeh = "^4.0.5"
ipyleaflet = "^0.19.2"
ipywidgets-bokeh = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
