[tool.poetry]
name = "hefs-fews-hub"
version = "0.1.0"
description = ""
authors = ["Sam Lamont <slamont@rit.org>", "Florian Kluibenschaedl <fkluibenschaedl@rti.org>"]
license = "MIT"
readme = "README.md"


packages = [
    { include = "hefs_fews_hub", from = "src" },
]

include = [
    { path = "src/hefs_fews_hub/images/*.png", format = ["sdist", "wheel"] },
    { path = "src/hefs_fews_hub/geo/*.geojson", format = ["sdist", "wheel"] },
    { path = "src/hefs_fews_hub/labextension/**/*", format = ["sdist", "wheel"] },
    { path = "src/hefs_fews_hub/panel_dashboard_notebook.ipynb", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
panel = "^1.5.2"
ipyleaflet = "^0.19.2"
s3fs = "^2024.10.0"
jupyter-server-proxy = "^4.4.0"
plotly = "^6.5.2"
jupyter-remote-desktop-proxy = "^3.0.1"
ipywidgets = "^8.1.8"
ipywidgets-bokeh = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[tool.poetry.plugins."jupyter_serverproxy_servers"]
panel-dashboard = "hefs_fews_hub.jupyter_server_proxy_config:setup_panel_dashboard"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
